--- a/style.css
+++ b/style.css
@@ -15,7 +15,6 @@ a{
 
 .headerContainer{
     width: 70%;
-    border: 1px solid tomato;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -76,8 +75,6 @@ font-weight: 300;
     margin: 0px auto;
     width: 70%;
     height: 50rem;
-    border: 1px solid black;
-    background-color: rgba(0, 255, 255, 0.259);
     padding: 2rem; 
     display: flex;
     justify-content: space-between;
@@ -85,42 +82,37 @@ font-weight: 300;
 }
 
 .main_col{
-    background-color: rgba(250, 235, 215, 0.325);
     height: 100%;
     width: 48%;
-    border: 1px solid black;
     display: flex;
     flex-direction: column;
 }
 
 .education_Container{
     height: 40%;
-    background-color: bisque;
 }
 .connectionsRequest_Container{
     height: 40%;
-    background-color: bisque;
     margin-bottom: 2rem;
 }
 
 
 .border_Properties{
-    border: 2px solid gray;
+    border: 4px solid lightgray;
 }
 
 /*-------------- Card Info CSS-------------------*/
 .cardInfo_Container{
     height: 60%;
-    background-color: bisque;
     margin-bottom: 2rem;
     
 }
 .cardInfo_header{
     background-color: rgba(23,162,183,255);
     height: 25%;
-    width: 101%;
+    width: 102%;
     border: 1px solid rgba(23,162,183,255);
-    transform: translate(-0.5%,-4%);
+    transform: translate(-1%,-4.2%);
     
 }
 
@@ -164,9 +156,18 @@ margin-top: 6rem;
     
     text-decoration: underline;
 }
+/*-------------- Education  CSS-------------------*/
 .education_Container .black_header{
     justify-content: flex-start;
 
+}
+.education_Container h3,h2{
+    margin-left: 2rem;
+    margin-top: 1rem;
+}
+.education_main_container{
+    border: 4px solid lightgrey;
+    height: 12.4rem;
 }
 
 /*-------------Start of connections Container------------*/
@@ -184,26 +185,104 @@ margin-top: 6rem;
     align-items: center;
 }
 .connections_Container .header_center_circle{
-    background-color: brown;
+    background-color: rgba(205,205,205,255);
     height: 4rem;
-    width: 4rem;
-    padding-top: 1rem;
+    width: 5rem;
     border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: black;
 }
 .connections_Container .header_center_text{
-    margin-right: 9rem;
+    margin-right: 10rem;
 }
 .connections_Container{
     height: 60%;
-    background-color: bisque;
+}
+.connections_main{
+    width: 100%;
+    height: 60%;
+    border: 4px solid lightgray;
+}
+.connection_row{
+    width: 100%;
+    height: 3rem;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin-top: 0.5rem;
+}
+.connection_row img{
+    margin-left: 2rem;
+}
+.connection_name{
+    margin-left: 2rem;
+}
+.view_more_container{
+    width: 100%;
+    height: 13.5%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding-left: 2rem;
+    border: 4px solid lightgray;
+    border-top: 0px;
+}
+.view_more_container a{
+    font-size: large;
+    text-decoration: underline;
 }
 /*-------------Start of Connections requests Container------------*/
 .connectionsRequest_Container .header_center_circle{
-    background-color: brown;
+    background-color:rgba(205,205,205,255);
     height: 3rem;
     width: 3rem;
-    padding-top: 0.5rem;
-    padding-left: 0.25rem;
     border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: black;
 }
+.connectionsRequest_Container .header_center_text{
+    margin-right: 3rem;
+}
+.main_connection_request_container{
+    border: 4px solid lightgray;
+    width: 100%;
+    height: 75%;
+}
+.request_row{
+    width: 100%;
+    height: 3rem;
+    margin-top: 0.5rem;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.icon_profile_image{
+    width: 2rem;
+    height: 2rem;
 
+}
+.request_name{
+    margin-right: 5rem;
+}
+.icon_accept_circle{
+    width: 2rem;
+    height: 2rem;
+    margin-left: 5rem;
+}
+.icon_reject_circle{
+    width: 2rem;
+    height: 2rem;
+}
+.font{
+    font-family:cursive;
+}
+.color_gray{
+    color: lightgray;
+}
+.font_larger{
+    font-size: 2rem;
+}
